docs: :memo: add 'boyfriend' text to main button in HTML file, to guide user what to say

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <!-- main button -->
     <button class="btn">
-      Hey little girl/my boy, can you be my girlfriend?
+      Hey little girl/my boy, can you be my girlfriend/boyfriend?
     </button>
     <!-- end main button -->
 
